# off-grid-property-finder

./: .gitignore  DATA-SOURCES.md  IMPLEMENTATION-BACKLOG.md  README.md  SPEC.md  config.yaml  pyproject.toml
.claude/: tasks.md
src/: analyze.py  check_data.py  cli.py  clip.py  config.py  constants.py  crs.py  dem.py  exclusions.py  export.py  grid.py  ingest.py  logging_config.py  mask.py  prepare.py  score.py  visualize.py
src/scoring/: __init__.py  access.py  buildable.py  confidence.py  elevation.py  hydro.py  preferences.py  registry.py  solar.py
tests/: conftest.py  test_analyze.py  test_cli.py  test_config.py  test_exclusions.py  test_export.py  test_grid.py  test_integration.py  test_scoring_access.py  test_scoring_buildable.py  test_scoring_composite.py  test_scoring_confidence.py  test_scoring_elevation.py  test_scoring_hydro.py  test_scoring_preferences.py  test_scoring_solar.py
