[project]
name = "property-finder"
version = "0.1.0"
description = "Rank Nova Scotia land for off-grid suitability using geospatial analysis"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "geopandas>=1.0",
    "pyogrio>=0.7",
    "rasterio>=1.3",
    "shapely>=2.0",
    "rasterstats>=0.19",
    "folium>=0.16",
    "pyyaml>=6.0",
    "whitebox>=2.3",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
property-finder = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
